--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,8 +1,35 @@
 // app global css in SCSS form
 
+
 // 让q-input 的高度和 q-btn size=sm的高度保持一致
 .q-input-sm .q-field__control,
 .q-input-sm .q-field__marginal {
   height: 28px;
   font-size: 14px;
 }
+/**
+ *   form表单中，让label和input保持水平对齐,示例
+              <div class="q-form-row">
+                <label class="q-form-label"><span class="text-red">*</span> 用户名：</label>
+                <div>
+                  <q-input
+                    v-model="formData.username"
+                    outlined
+                    dense
+                    :rules="[rules.required('用户名'), rules.username]"
+                  />
+                </div>
+              </div>
+ */
+// *** BEGIN ****
+.q-form-row {
+  display: flex;
+  align-items: baseline;
+}
+.q-form-label {
+  font-weight: bold;
+  line-height: 1.5; /* 保证 label 垂直居中 */
+  text-align: right;
+  min-width: 70px;
+}
+// *** END ****
